# pricesmart

./: .gitignore  ARCHITECTURE_FLOW.md  ARCHITECTURE_FLOW_CORRECT.md  CHANGELOG.md  DASHBOARD_USAGE_GUIDE.md  DEMO_GUIDE.md  DEPLOYMENT_CHECKLIST.md  GIT_LISTO.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V120.md  QUICK_START.md  README.md  RELEASE_NOTES_V120.md  TOKEN_TRACKING_IMPLEMENTATION.md  TOLERANCE_FILTER_EXPLANATION.md  demo_quick_setup.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_button_fix.py  test_imports.py  test_scraper.py  test_token_tracking.py  validate_token_tracking.py
backend/: Dockerfile
backend/app/agents/: __init__.py  catalog_enrichment.py  data_enricher.py  market_research.py  pricing_intelligence.py  pricing_pipeline.py  product_matching.py  search_strategy.py
backend/app/api/endpoints/: products.py
backend/app/core/: config.py  token_costs.py  token_tracker.py
backend/app/mcp_servers/mercadolibre/: models.py  scraper.py  stats.py
backend/app/models/: product.py
backend/app/services/: catalog_service.py
backend/core/: token_costs.py  token_tracker.py
backend/data/: productos_catalogo.csv
docs/: DATA_ENRICHMENT_STRATEGY.md  IMPLEMENTATION_SUMMARY_DATA_ENRICHMENT.md
frontend/: Dockerfile  dashboard.py  dashboard_enhanced.py  dashboard_simple.py
scripts/: demo_data_enrichment.py  load_catalog.py  validate_implementation.py
